# OpenglFlightPrototype

./: CMakeCache.txt  CMakeLists.txt  FEATURE-LIST.md  KNOWN-BUGS.md  Project-Report.md  README.md  TODO-LIST.md  gfx project.vcxproj  keybindings.pdn
Debug/: vc141.idb
Debug/gfx project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gfx project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/model/: Read-Me.txt  ask21mi.blend  ask21mi.mtl  lowpolytree.mtl
assets/models/: cartoon.3ds
assets/models/old man/: muro.mtl
include/: Global.hpp  camera.hpp  freetype.hpp  loadedModel.hpp  mesh.hpp  model.hpp  plane.hpp  shader.hpp  sun.hpp  terrainModel.hpp  tree.hpp
shaders/: loadedModel.frag  terrainShader.frag  terrainShader.vert  testfragment.frag
src/: camera.cpp  freetype.cpp  loadedModel.cpp  main.cpp  mesh.cpp  model.cpp  plane.cpp  shader.cpp  sun.cpp  terrainModel.cpp  tree.cpp
